responsive with javascript example

--- a/samples/basic/index.html
+++ b/samples/basic/index.html
@@ -5,7 +5,12 @@
     <title>title</title>
   </head>
   <body>
-    <a href="videoplayer.html">Video Player</a>
+    <ul>
+      <li><a href="videoplayer.html">Video Player</a></li>
+      <li><a href="responsive-javascript.html">Responsive Javascript</a></li>
+      <li><a href=""></a></li>
+    </ul>
+
 
   </body>
 </html>
