responsive breakpoints solution added

--- a/samples/basic/index.html
+++ b/samples/basic/index.html
@@ -8,7 +8,7 @@
     <ul>
       <li><a href="videoplayer.html">Video Player</a></li>
       <li><a href="responsive-javascript.html">Responsive Javascript</a></li>
-      <li><a href=""></a></li>
+      <li><a href="responsive-breakpoints.html">Responsive Breakpoints</a></li>
     </ul>
 
 
