media library upload widget, need to put api_key and username but once in it works

--- a/samples/basic/index.html
+++ b/samples/basic/index.html
@@ -9,6 +9,9 @@
       <li><a href="videoplayer.html">Video Player</a></li>
       <li><a href="responsive-javascript.html">Responsive Javascript</a></li>
       <li><a href="responsive-breakpoints.html">Responsive Breakpoints</a></li>
+      <li><a href="videoplayer-video-codec-multiple.html">Multiple Video Codec automated</a></li>
+      <li><a href="upload-widget.html">Upload Widget</a></li>
+      <li><a href="media-library-widget.html">Media Library Widget</a></li>
     </ul>
 
 
