--- a/samples/basic/responsive-javascript.html
+++ b/samples/basic/responsive-javascript.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div>
-      <img data-src="https://res.cloudinary.com/markg16/image/upload/w_auto,h_1000,c_scale/v1562072592/oodt9ndrdikjtjkh33aa.jpg" alt="" class="cld-responsive">
+      <img data-src="https://res.cloudinary.com/markg16/image/upload/w_auto,h_800,dpr_auto,c_scale/v1562072592/oodt9ndrdikjtjkh33aa.jpg" alt="" class="cld-responsive">
 
       <script>
         // Initialize
