--- a/samples/basic/index.html
+++ b/samples/basic/index.html
@@ -7,6 +7,7 @@
   <body>
     <ul>
       <li><a href="videoplayer.html">Video Player</a></li>
+      <li><a href="videoplayer-adaptivebitrate.html">Adaptive Bitrate Stream Video Player</a></li>
       <li><a href="responsive-javascript.html">Responsive Javascript</a></li>
       <li><a href="responsive-breakpoints.html">Responsive Breakpoints</a></li>
       <li><a href="videoplayer-video-codec-multiple.html">Multiple Video Codec automated</a></li>
