--- a/samples/basic/videoplayer-adaptivebitrate.html
+++ b/samples/basic/videoplayer-adaptivebitrate.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>title</title>
 
-    <link href="https://unpkg.com/cloudinary-video-player/dist/cld-video-player.min.css" rel="stylesheet">
+    <!--  light version of cld-video-player js and css is used -->
+    <link href="https://unpkg.com/cloudinary-video-player/dist/cld-video-player.light.min.css" rel="stylesheet">
     <script src="https://unpkg.com/cloudinary-core/cloudinary-core-shrinkwrap.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="https://unpkg.com/cloudinary-video-player/dist/cld-video-player.min.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/cloudinary-video-player/dist/cld-video-player.light.min.js"></script>
 
 
   </head>
@@ -16,9 +17,11 @@
     <script>
       var cld = cloudinary.Cloudinary.new({ cloud_name: 'markg16' });
       var demoplayer = cld.videoPlayer('doc-player').width(600);
-      demoplayer.source('sf_night_sky')
-
+      demoplayer.source('adaptive-test', { sourceTypes: ['hls'], transformation: {
+ streaming_profile: 'hd' } })
+      // Video above with m3u8 is adaptive bitrate streaming format.
     </script>
+
 
   </body>
 </html>
