added adaptive video player

--- a/samples/basic/videoplayer.html
+++ b/samples/basic/videoplayer.html
@@ -17,7 +17,7 @@
       var cld = cloudinary.Cloudinary.new({ cloud_name: 'markg16' });
       var demoplayer = cld.videoPlayer('doc-player').width(600);
       demoplayer.source('sf_night_sky')
-
+      // note
     </script>
 
   </body>
